@@ -1,0 +1,4 @@
+[submodule "submodules/serial"]
+	path = submodules/serial
+	url = https://github.com/wjwwood/serial.git
+	ignore = dirty
